theme/hypermd-light.scss
/* ... */
.hmd-alignment-popover {
    position: absolute;
    display: block;
    padding: 3px;
    background-color: #fff;
    border: 1px solid #ccc;
    border-radius: 4px;
    z-index: 1000;
    .hmd-left-align, .hmd-right-align, .hmd-center-align, .hmd-del-ele {
        color: transparent;
        display: inline-block;
        vertical-align: middle;
        border-radius: 4px;
        width: 30px;
        text-align: center;
        &:not(.hmd-right-align) {
            margin-right: 3px;
        }
        svg {
            fill: #333;
            height: 20px;
            vertical-align: middle;
        }
        &.hmd-del-ele svg {
            fill: #EA3323;
            margin-top: -3px;
        }
        &.selected {
            background-color: rgba(#000, 0.1);
        }
        &:hover {
            background-color: rgba(#000, 0.15);
        }
    }
    .hmd-del-ele::before {
        content: " ";
        border-left: 1px solid #ccc;
        left: -4px;
        position: relative;
    }
}

